# xPOAP

./: Cargo.toml  README.md
apps/: Cargo.toml
contracts/: EvenNumber.sol  ISemaphore.sol  POAPGroup.sol
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
risc0-ethereum/: Cargo.toml
risc0-ethereum/view-call/src/: config.rs
script/: Deploy.s.sol
tests/: EvenNumber.t.sol  POAPGroup.t.sol
