[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
risc0-ethereum-view-call = { path = "../risc0-ethereum/view-call", features=["host"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.11" }
ethers = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.35", features = ["full"] }
k256 = { version = "*", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
rand_core = "0.6.4"
tracing-subscriber = { workspace = true }