[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }
risc0-zkvm = {  version = "0.21", default-features = false, features = ['std'] }
risc0-ethereum-view-call = { path = "../../risc0-ethereum/view-call" }
k256 = { version = "*", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
light-poseidon = {git = "https://github.com/Lightprotocol/light-poseidon.git" }
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"

[patch.crates-io]
# use optimized risc0 circuit
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }


[profile.release]
lto = "thin"